[workspace]

[package]
name = "cw-storage-plus"
version = "1.0.2"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Enhanced storage engines"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-storage-plus"
homepage = "https://cosmwasm.com"

[package.metadata.docs.rs]
all-features = true # include macro feature when building docs

[features]
default = ["iterator", "std"]
iterator = ["cosmwasm-std/iterator"]
macro = ["cw-storage-macro"]
std = ["cosmwasm-std/std", "schemars"]

[lib]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
cosmwasm-std = { git = "https://github.com/dzmitry-lahoda-forks/cosmwasm.git", rev = "1277597cbf380a8d04dbe676d9cb344ca31634b6", default-features = false }
schemars = { version = "0.8.3", optional = true}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
cw-storage-macro = { version = "1.0.0", optional = true, path = "macros" }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
# Deactivate default features in order to be able to use this on systems without
# access to an entropy souce via getrandom such as wasm32-unknown-unknown
rand = { version = "0.8", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }

# We don't use the following dependencies directly. They're dependencies of our dependencies.
# We specify them to tighten their version requirements so that builds with `-Zminimal-versions` work.
# https://github.com/GREsau/schemars/pull/192 is merged, we can update schemars and release this.
serde_json = "1.0.29"

[[bench]]
name = "main"
harness = false
