[workspace]

[package]
name = "cw-storage-plus"
version = "3.0.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
description = "Enhanced storage engines"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-storage-plus"
homepage = "https://cosmwasm.com"

[package.metadata.docs.rs]
all-features = true # include macro feature when building docs

[features]
default = ["iterator"]
iterator = ["cosmwasm-std/iterator"]
macro = ["dep:cw-storage-macro"]

[lib]
# See https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[dependencies]
cosmwasm-std = { version = "3.0.0", default-features = false, features = ["std"] }
schemars = "0.8.22"
serde = { version = "1.0", default-features = false, features = ["derive"] }
cw-storage-macro = { version = "2.1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
# Deactivate default features in order to be able to use this on systems without
# access to an entropy souce via getrandom such as wasm32-unknown-unknown
rand = { version = "0.8", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
derive_more = { version = "2.0.1", features = ["full"] }

[[bench]]
name = "main"
harness = false
