[package]
name = "cw-storage-macro"
version = "1.2.0"
authors = ["yoisha <48324733+y-pakorn@users.noreply.github.com>"]
edition = "2018"
description = "Macro helpers for storage-plus"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-storage-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.96", features = ["full"] }
